# cuda-gaussian-splatting

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  vcpkg.json
apps/: CMakeLists.txt  dump_points.cpp  eval_main.cpp  hello_cuda.cpp  train_main.cpp  viewer_main.cpp
docs/: issues.md
scripts/: download_dataset.bat
src/core/: gaussian.cpp  gaussian.hpp  gaussian_init.cpp  gaussian_init.hpp  sh.cpp  sh.cu  sh.hpp  sh_backward.cu  sh_backward.hpp  types.hpp
src/data/: colmap_loader.cpp  colmap_loader.hpp  dataset.cpp  dataset.hpp  image_io.cpp  image_io.hpp
src/optimizer/: adam.cpp  adam.hpp  densification.cpp  densification.hpp  fused_adam.cu  fused_adam.hpp  mcmc_densification.cpp  mcmc_densification.hpp
src/rasterizer/: backward.cu  backward.cuh  backward.hpp  forward.cu  forward.cuh  forward.hpp  projection.cu  projection.cuh  projection.hpp  projection_backward.cu  projection_backward.hpp  rasterizer.cpp  rasterizer.hpp  sorting.cu  sorting.hpp
src/training/: loss.cpp  loss.hpp  lr_schedule.hpp  metrics.cpp  metrics.hpp  trainer.cpp  trainer.hpp
src/utils/: cuda_info.cu  cuda_info.hpp  cuda_utils.cuh  memory_monitor.hpp  ply_io.cpp  ply_io.hpp
src/viewer/: camera_controller.hpp  viewer.cpp  viewer.hpp
tests/: CMakeLists.txt  test_backward.cpp  test_colmap_loader.cpp  test_cuda_utils.cpp  test_dataset.cpp  test_densification.cpp  test_fused_adam.cpp  test_gaussian_init.cpp  test_gaussian_model.cpp  test_loss.cpp  test_mcmc.cpp  test_metrics.cpp  test_ply_io.cpp  test_projection.cpp  test_rasterizer.cpp  test_sh.cpp  test_training.cpp
